css/styles.css
/* ... */
@keyframes AnimationName {
    0% {
        background-position: 0% 69%
    }

    50% {
        background-position: 100% 32%
    }

    100% {
        background-position: 0% 69%
    }
}


#bottomFooter {
    color: #000;
    text-align: center;
}

#bottomFooter .fa-github,
#bottomFooter .fa-linkedin,
#bottomFooter .fa-behance,
#bottomFooter .fa-google,
#bottomFooter .fa-youtube,
#bottomFooter .fa-instagram {
    color: #000;
    font: normal 1.5em/1 FontAwesome !important;
}

#bottomFooter .fa-github:hover,
#bottomFooter .fa-linkedin:hover,
#bottomFooter .fa-behance:hover,
#bottomFooter .fa-google:hover,
#bottomFooter .fa-youtube:hover,
#bottomFooter .fa-instagram:hover {
    color: #12a58c;
    font: normal 1.5em/1 FontAwesome !important;
}

#bottomFooter ul {
    display: inline-flex;
    list-style: none;
}


/* This is the menu ror header*/


.graph1 .skills h2 {
    margin: 0 1em;
}

.icon,
.oh p,
.layer1 h1,
.hon p,
.soul p,
.text p,
.ana p,
.chi p,
.ash p,
.con p {
    color: rgba(187, 187, 187, 0.788);
}



.icon {
    position: absolute;
    bottom: 25%;
    right: 0%;

}

.sidenav {
    position: fixed;
    height: 15%;
    width: 5%;
    background-color: #7d1d64;
    left: 95%;
    top: 39%;
    overflow-x: hidden;

}

.sidenav a {
    display: block;
}



.border {
    border-bottom: 1px #C4C3C3 solid;
    width: 75%;
    margin: 1em auto;

}


/* default for headers */

h1 {
    font-size: 40px;
    color: #d4d4d6;
    font-family: 'Quicksand', sans-serif;

}

h2 {
    font-family: 'Quicksand', sans-serif;
    font-size: 2.75em;
    color: rgba(67, 74, 255);
    border: none;
    padding: 0;
}

h3,
.graph1 h4 {
    font-size: 1.2em;
    color: #C7BA3D;
    display: block;
    font-family: 'Quicksand', sans-serif;
    font-weight: bold;
}


p,
ul {
    font-family: 'Noto Sans', sans-serif;
    color: #332626;
}

/* Top buton */
#myBtn {
    display: none;
    bottom: 37%;
    right: 0;
    height: 50px;
    width: 50px;
    z-index: 1;
    font-size: 15px;
    border: none;
    outline: none;
    color: #fff;
    cursor: pointer;
    padding: 20px;
    background-color: #7d1d64;
}

#myBtn:hover {
    background-color: rgba(145, 29, 121, .9);
    color: rgba(222, 219, 219, .8);
}

/* motorchi box for Web-Design.html page */
.text {
    background: linear-gradient(rgba(0, 0, 0, 0.66),
            rgba(0, 0, 0, 0.68)), url("../motorchi/images/motor-chi-tee.jpg");

}

.ash,
.chi,
.ana,
.soul,
.con,
.hon,
.text {
    width: 300px;
    height: 300px;
	background-size: cover;
    background-repeat: no-repeat;
}



.con:hover,
.soul:hover,
.hon:hover,
.text:hover,
.ana:hover,
.chi:hover,
.ash:hover {
    background: linear-gradient(290deg, #000000, #100447);
    display: block;
    opacity: .5;
    -webkit-animation: AnimationName 5s ease-in-out;
    -moz-animation: AnimationName 5s ease-in-out;
    -o-animation: AnimationName 5s ease-in-out;
    animation: AnimationName 5s ease-in-out;
}

.soul{
	background:url('https://ibb.co/Tw2345G'), linear-gradient(rgba(0, 0, 0, 0.66),
	rgba(0, 0, 0, 0.66));
}

.ana{
	background:url('https://ibb.co/Tw2345G'), linear-gradient(rgba(0, 0, 0, 0.66),
	rgba(0, 0, 0, 0.66));
}

.chi{
	background:url('https://ibb.co/Tw2345G'), linear-gradient(rgba(0, 0, 0, 0.66),
	rgba(0, 0, 0, 0.66));
}

.ash{
	background:url('https://ibb.co/Tw2345G'), linear-gradient(rgba(0, 0, 0, 0.66),
	rgba(0, 0, 0, 0.66));
}

.hon{
	background:url('https://ibb.co/Tw2345G'), linear-gradient(rgba(0, 0, 0, 0.66),
	rgba(0, 0, 0, 0.66));
}

.link-hp{
    width: 100%;
	margin: 100px 20px;
	padding: 10px;
	font-size: 1.5em;
	position: sticky;
	right: 0;
	left: 0;
	top: 0;
	background-color: #fff;
}


.link-hp ul{
	display: inline-flex;
}
.link-hp li{
	list-style: none;
	padding-left: 10px;
}
.link-hp a:visited, .link-hp a:active{
	color: none;

}
/* this is motorchi.html top video loop with the black */
.darkness {
    margin: 0;
    padding: auto;
    overflow: hidden;
    background: rgba(0, 0, 0, .8);
    -webkit-font-smoothing: antialiased;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    width: 100%;
    z-index: 1;
}

.graph {
    flex: 100%;
    max-width: 100%;
}

.cute video {
    position: relative;
    height: auto;
    width: 100%;
    z-index: -1;
}

.layer1 {
    font-size: 40px;
    position: absolute;
    top: 50%;
    left: 0;
    right: 0;
    bottom: 0;
    text-align: center;
    color: rgba(113, 118, 119, 0.993);

}

/* paragrapgh for the web design */
.hon p,
.soul p,
.text p,
.ana p,
.chi p,
.ash p,
.con p {
    margin: 20px;
    font-size: calc(1em + .5vw);
    align-content: center;
    color: #ffffff;
}



.web h3 {
    color: #DBAA01;
    font-size: 1.5em;
}

.galla p {
    font-size: 1.2em;
    color: #383737;
    margin: 0 1em;
}

.middle {
    flex: 25%;
    max-width: 25%;
    margin-left: 5%;
}

.sidenav ul li {
    list-style: none;
}

.sidenav ul li a {
    color: #ffffff;
    text-decoration: none;
}


.crazy {
    align-items: center;
    text-align: center;
}

/* making image responsive for the I like to... part of the protofoilo.html*/
.image {
    display: block;
    width: 100%;
    height: auto;
    margin: auto;
}


/* the background that transition */
.humble:hover .overlay {
    bottom: 0;
    height: 100%;
}

.humble {
    position: relative;
    min-width: 50%;
}

.overlay {
    border-radius: 100%;
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: rgba(242, 208, 24, .8);
    overflow: hidden;
    width: 100%;
    height: 0;
    transition: .5s ease;
}

.layer {
    font-size: 12px;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    text-align: center;
}

.layer p {
    font-weight: bold;
    font-size: calc(1em + .1vw);
    color: #292d30;
    display: block;
    margin: auto;
}
/* ... */

